hphp/test/zend/good/ext-standard-strings/strcoll.php
<?php

 $a = 'a';
 $b = 'A';

setlocale (LC_COLLATE, 'C');
$result = strcoll($a, $b);
if($result > 0) {
	echo "Pass\n";
}
?>